# chronicle

./: .VERSION  .dockerignore  .editorconfig  .fossa.yml  .gitignore  .mdlrc  .mdlrc.rb  .pre-commit-config.yaml  .readthedocs.yaml  .taplo.toml  .tool-versions  2a  CHANGELOG.md  COPYRIGHT  Cargo.toml  Dockerfile  EXPORT_FEATURE_README.md  Jenkinsfile  Makefile  README.md  buildkit.toml  component.puml  docker-compose.yaml  mkdocs.yml  opa.mk  rustfmt.toml  standard_defs.mk
api/: Cargo.toml  build.rs
api/migrations/2021-10-13-113157_create_namespace/: down.sql  up.sql
api/migrations/2021-10-13-171328_create_agent/: down.sql  up.sql
api/migrations/2021-10-28-195657_create_activity/: down.sql  up.sql
api/migrations/2022-01-18-144301_ledger_sync/: down.sql  up.sql
api/src/: lib.rs  models.rs  schema.rs  vocab.rs
api/src/bui/: mod.rs
api/src/chronicle_graphql/: activity.rs  agent.rs  cursor_query.rs  entity.rs  mod.rs  mutation.rs  query.rs
api/src/graphql/: activity.rs  agent.rs  cursor_query.rs  entity.rs  mod.rs  mutation.rs  query.rs
api/src/persistence/: mod.rs  query.rs  schema.rs
api/src/snapshots/: api__test__activity_generate.snap  api__test__activity_generate.snap.new  api__test__activity_use.snap  api__test__agent_public_key.snap  api__test__agent_publiv_key.snap  api__test__agent_publiv_key.snap.new  api__test__create_activity.snap  api__test__create_agent.snap  api__test__create_namespace.snap  api__test__create_namespace.snap.new  api__test__derive_entity_abstract.snap  api__test__derive_entity_primary_source.snap  api__test__derive_entity_quotation.snap  api__test__derive_entity_revision.snap  api__test__end_activity.snap  api__test__many_activities.snap  api__test__many_activities.snap.new  api__test__start_activity.snap  api__test__start_activity.snap.new
bootstrap/: Cargo.toml
bootstrap/src/: lib.rs
bootstrap/src/bootstrap/: cli.rs  config.rs  mod.rs
bootstrap/src/db/: embedded.rs
chronicle/: Cargo.toml
chronicle-untyped/: Cargo.toml  build.rs
chronicle-untyped/src/: test.rs
chronicle/src/: lib.rs
chronicle/src/bootstrap/: cli.rs  config.rs  mod.rs
chronicle/src/codegen/: linter.rs  mod.rs  model.rs
cli/: Cargo.toml
cli/src/: args.yaml  cli.rs  config.rs  lib.rs  main.rs  schema.rs  telemetry.rs
cli/src/bootstrap/: cli.rs
cli/src/db/: mod.rs
cli/src/snapshots/: chronicle__test__delegation-2.snap  chronicle__test__primary_source-2.snap  chronicle__test__primary_source.snap  chronicle__test__query_agents_by_cursor-3.snap  chronicle__test__quotation-2.snap  chronicle__test__quotation.snap  chronicle__test__revision-2.snap  chronicle__test__untyped_derivation-2.snap  chronicle__test__untyped_derivation.snap
common/: Cargo.toml  build.rs
common/proptest-regressions/: models.txt
common/proptest-regressions/prov/: models.txt
common/src/: attributes.rs  commands.rs  context.rs  ledger.rs  lib.rs  models.rs  protocol.rs  signing.rs  vocab.rs
common/src/protos/: event.proto  submission.proto
common/src/prov/: id.rs  mod.rs  models.rs  operations.rs  transactions.rs  vocab.rs
crates/api/: .dockerignore  Cargo.toml  diesel.toml
crates/api/src/: api.rs  commands.rs  dispatch.rs  error.rs  import.rs  inmem.rs  lib.rs  opa.rs
crates/async-sawtooth-sdk/: Cargo.toml
crates/async-sawtooth-sdk/src/: error.rs  ledger.rs  lib.rs  sawtooth.rs  zmq_client.rs
crates/chronicle/: Cargo.toml
crates/chronicle-arrow/: Cargo.toml  tree.txt
crates/chronicle-arrow/src/: lib.rs  meta.rs  operations.rs  peekablestream.rs  query.rs
crates/chronicle-data/: Cargo.toml
crates/chronicle-data/src/: cli.rs  main.rs
crates/chronicle-domain/: .gitignore  Cargo.toml  build.rs  domain.yaml
crates/chronicle-domain-test/: .gitignore  Cargo.toml  build.rs
crates/chronicle-domain-test/src/: .test.rs.pending-snap  test.rs
crates/chronicle-persistence/: Cargo.toml
crates/chronicle-persistence/src/: cursor.rs  database.rs  lib.rs  query.rs  queryable.rs
crates/chronicle-protocol/: Cargo.toml  build.rs
crates/chronicle-protocol/src/: address.rs  lib.rs  messages.rs  perf.md  protocol.rs  settings.rs
crates/chronicle-signing/: Cargo.toml
crates/chronicle-signing/src/: embedded_secret_manager_source.rs  error.rs  lib.rs  types.rs  vault_secret_manager_source.rs
crates/chronicle-synth/: .gitignore  Cargo.toml  Makefile  README.md  collect  domain.yaml  exclude_collections.json  generate
crates/chronicle-synth/src/: collection.rs  domain.rs  error.rs  generate.rs  lib.rs
crates/chronicle-synth/synth/: activity_exists.json  activity_name.json  activity_uses.json  agent_acts_on_behalf_of.json  agent_exists.json  agent_name.json  attributes.json  create_namespace.json  earlier_date_time.json  end_activity.json  entity_derive.json  entity_exists.json  entity_name.json  later_date_time.json  namespace_uuid.json  role.json  roles.json  same_namespace_name.json  same_namespace_uuid.json  second_activity_name.json  second_agent_name.json  second_entity_name.json  set_activity_attributes.json  set_agent_attributes.json  set_entity_attributes.json  start_activity.json  was_associated_with.json  was_associated_with_has_role.json  was_attributed_to.json  was_generated_by.json  was_informed_by.json
crates/chronicle-telemetry/: Cargo.toml
crates/chronicle-test-infrastructure/: Cargo.toml
crates/common/: Cargo.toml  build.rs  tree.txt
crates/embedded-substrate/: Cargo.toml  meta.rs
crates/frame-chronicle/: Cargo.toml
crates/opa-tp-protocol/: Cargo.toml  build.rs
frontend/: Cargo.toml  index.html  package.json  trunk.toml
frontend/css/: index.scss  style.scss
frontend/src/: lib.rs
proto/: Cargo.toml
proto/src/: address.rs  lib.rs  messages.rs  messaging.rs  tp.rs
sawtooth-interface/: Cargo.toml
sawtooth-interface/src/: lib.rs
sawtooth_protocol/: Cargo.toml
sawtooth_protocol/src/: address.rs  bin.rs  events.rs  lib.rs  messages.rs  messaging.rs  state_delta.rs  tp.rs
sawtooth_tp/: Cargo.toml
sawtooth_tp/src/: main.rs  telemetry.rs  tp.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs  telemetry.rs
(+552 files in other folders)
