[workspace]

members = [
  "crates/common",
  "crates/api",
  "crates/async-sawtooth-sdk",
  "crates/chronicle",
  "crates/chronicle-domain",
  "crates/chronicle-domain-lint",
  "crates/chronicle-domain-test",
  "crates/chronicle-protocol",
  "crates/chronicle-synth",
  "crates/chronicle-telemetry",
  "crates/gq-subscribe",
  "crates/id-provider",
  "crates/opa-tp",
  "crates/opa-tp-protocol",
  "crates/opactl",
  "crates/sawtooth-tp",
]

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1.0.6"
assert_fs = "1.0"
async-graphql = "5.0.9"
async-graphql-poem = "5.0.9"
async-sawtooth-sdk = { path = "crates/async-sawtooth-sdk" }
async-stream = "0.3.3"
async-trait = "0.1.61"
base64 = "0.21"
bytes = "1.3.0"
cached = "0.42"
cfg-if = "1.0.0"
chrono = "0.4.26"
clap = { version = "3.2.25", features = ["derive"] } # opactl: version = "4.1.1"
clap_complete = "3.2.3"
colored_json = "3.0.1"
console-subscriber = "0.1"
const_format = "0.2"
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio"] }
custom_error = "1.9.2"
derivative = "2.2.0"
diesel = { version = "2.0.0-rc.0", features = [
  "postgres",
  "uuid",
  "chrono",
  "r2d2",
] }
diesel_migrations = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15"
futures = "0.3.21"
genco = "0.16.1"
glob = "0.3.0"
hashbrown = "0.13"
hex = "0.4.3"
http = "0.2.9"
insta = { version = "1.26.0", features = ["redactions", "toml"] }
iref = "2.2"
iref-enum = "2.1"
is-terminal = "0.4.7"
json-ld = { version = "0.14" }
json-syntax = { version = "0.9", features = ["serde", "serde_json"] }
jsonschema = "0.17.0"
jwtk = { version = "0.2.4", features = ["remote-jwks"] }
k256 = { version = "0.11.3", features = [
  "default",
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "sha256",
  "std",
  "pem",
  "serde",
] }
lazy_static = "1.4.0"
locspan = "0.7"
lru = "0.11"
maplit = "1.0.2"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
mime = "0.3"
mockito = "1.1"
oauth2 = "4.4"
opa = { git = "https://github.com/tamasfe/opa-rs", rev = "3cf7fea" }
openssl = "0.10.55"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
owo-colors = "3.5.0"
parking_lot = "0.12.0"
percent-encoding = "2.1.0"
pin-project = "1.0.12"
pin-project-lite = "0.2"
pinvec = "0.1.0"
pkcs8 = { version = "0.10", features = ["std", "alloc"] }
poem = { version = "1.3", features = ["opentelemetry", "websocket"] }
portpicker = "0.1.1"
pow_of_2 = "0.1.2"
proptest = "1.0.0"
prost = "0.10" # common, sawtooth-protocol, sawtooth-tp: version = "0.10.0"
prost-build = "0.10.0"
prost-types = "0.11.2"
protobuf = "2.27.1"
question = "0.2.2"
r2d2 = "0.8.9"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.3"
rdf-types = "0.14"
reqwest = "0.11.14"
rust-embed = { version = "6.6.0", features = [
  "debug-embed",
  "include-exclude",
] }
sawtooth-sdk = { git = "https://github.com/hyperledger/sawtooth-sdk-rust", rev = "5a300de" }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
serde_yaml = "0.9.14"
shellexpand = "3.0.0"
static-iref = "2.0.0"
tempfile = "3.4.0"
testcontainers = "0.14"
thiserror = "1.0"
tmq = "0.3"
tokio = { version = "1.27", features = [
  "time",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-elastic-apm = "3.2.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = [
  "default",
  "registry",
  "env-filter",
  "json",
] }
tungstenite = { git = "https://github.com/snapview/tungstenite-rs", rev = "8901dcc" }
url = "2.3.1"
user-error = "1.2.8"
uuid = "1.2.2"
valico = "3.6.0"
zmq = { version = "0.9", features = ["vendored"] }
