[package]
edition = "2021"
name    = "chronicle"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
api = { path = "../api" }
async-graphql = "3.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.1", features = ["derive"] }
clap_complete = "3.1.1"
colored_json = "2.1.0"
common = { path = "../common" }
custom_error = "1.9.2"
diesel = { version = "2.0.0-rc.0", features = [
  "sqlite",
  "uuid",
  "chrono",
  "r2d2",
] }
dotenv = "0.15.0"
futures = "0.3.21"
genco = "0.16.1"
hex = "0.4.3"
iref = "2.1.2"
k256 = { version = "0.10.4", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "sha256",
  "std",
  "pem",
] }
open = "2.1.1"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = [
  "rt-tokio",
  "collector_client",
  "reqwest_collector_client",
] }
proto = { path = "../sawtooth_protocol" }
question = "0.2.2"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.3"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
shellexpand = "2.1.0"
telemetry = { path = "../telemetry" }
tokio = { version = "1.18.2", features = ["time", "macros", "rt-multi-thread"] }
toml = "0.5.8"
tracing = "0.1.32"
url = { version = "2.2.2", features = ["serde"] }
user-error = "1.2.8"
uuid = "0.8.2"
valico = "3.6.0"


[features]
strict = []
# Use an in memory stub ledger
inmem = []

[build-dependencies]

[dev-dependencies]
assert_fs = "1.0"
insta = { version = "1.14.0", features = ["redactions", "toml"] }
tempfile  = "3.3.0"
