[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chronicle"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.12" }
question = "0.2.2"
api = {path = "../api"}
user-error = "1.2.8"
url = { version = "2.2.2", features = ["serde"] }
serde = "1.0.135"
toml = "0.5.8"
custom_error = "1.9.2"
serde_derive = "1.0.135"
rand = { version = "0.8.4", features = ["getrandom"] }
k256 = { version = "0.10.2", features = ["arithmetic","ecdsa", "pkcs8", "sha256", "std", "pem"] }
hex = "0.4.3"
rand_core = "0.6.3"
shellexpand = "2.1.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
common = {path="../common"}
proto = {path="../sawtooth_protocol"}
uuid = "0.8.2"
colored_json = "2.1.0"
clap_generate = "3.0.2"
dotenv = "0.15.0"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["time", "macros", "rt-multi-thread"] }
open = "2.0.2"



[features]
# Use an in memory stub ledger
inmem = []

[build-dependencies]
