[package]
edition = "2021"
name    = "cli"
version = "0.1.0"

[[bin]]
name = "chronicle"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
clap = { version = "3.0.12" }
clap_complete = "3.1.1"
colored_json = "2.1.0"
common = { path = "../common" }
custom_error = "1.9.2"
dotenv = "0.15.0"
futures = "0.3.19"
hex = "0.4.3"
k256 = { version = "0.10.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "sha256",
  "std",
  "pem",
] }
open = "2.0.2"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
proto = { path = "../sawtooth_protocol" }
question = "0.2.2"
rand = { version = "0.8.4", features = ["getrandom"] }
rand_core = "0.6.3"
serde = "1.0.135"
serde_derive = "1.0.135"
shellexpand = "2.1.0"
tokio = { version = "1.15.0", features = ["time", "macros", "rt-multi-thread"] }
toml = "0.5.8"
tracing = "0.1.29"
tracing-log = "0.1"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.6", features = [
  "default",
  "registry",
  "env-filter",
] }
url = { version = "2.2.2", features = ["serde"] }
user-error = "1.2.8"
uuid = "0.8.2"


[features]
strict = []
# Use an in memory stub ledger
inmem = []

[build-dependencies]
