[package]
version = "0.0.0"
name = "frontend"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2"
common = {path="../common"}
yew-event-source = "0.2.1"
wasm-logger = "0.2.0"
log = "0.4.14"
gloo = "0.4.0"
anyhow = "1.0.47"
getrandom = { version = "0.2.3", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlTextAreaElement",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
