[package]
name = "proto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
common = {path="../common"}
custom_error = "1.9.2"
serde = "1.0.130"
serde_derive = "1.0.130"
sawtooth-sdk = "0.5.0"
url = "2.2.2"
glob = "0.3.0"
serde_cbor = "0.11.2"
uuid = { version = "0.8.2", features = ["serde"] }
rand = { version = "0.8.4", features = ["getrandom"] }
pkcs8 = { version = "0.7.6", features = ["alloc", "std"] }
k256 = { version = "0.9.6", features = ["std","pem","pkcs8"] }
rust-crypto = "0.2.36"
hex = "0.4.3"
rand_core = "0.6.3"


[build-dependencies]
glob = "0.3.0"
prost-build = "0.9.0"
