[package]
name = "sawtooth-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
custom_error = "1.9.2"
iref = "2.0.3"
rust-crypto = "0.2.36"
sawtooth-sdk = "0.5.0"
serde = "1.0.130"
serde_derive = "1.0.130"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde"] }
zmq = "0.9.2"
