[package]
name = "proto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "sawtooth_protocol"
path = "src/lib.rs"

[[bin]]
name = "chronicle_sawtooth_tp"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.4", features = ["yaml"] }
bytes = "1.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
common = {path="../common"}
custom_error = "1.9.2"
serde = "1.0.131"
serde_derive = "1.0.131"
sawtooth-sdk = "0.5.0"
url = "2.2.2"
glob = "0.3.0"
serde_cbor = "0.11.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rand = { version = "0.8.4", features = ["getrandom"] }
pkcs8 = { version = "0.8.0", features = ["alloc", "std"] }
k256 = { version = "0.9.6", features = ["std","pem","pkcs8", "sha256"] }
rust-crypto = "0.2.36"
hex = "0.4.3"
rand_core = "0.6.3"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
derivative = "2.2.0"
async-trait = "0.1.52"
futures = "0.3.17"
lazy_static = "1.4.0"
tokio = { version = "1.14.0", features = ["time", "macros", "rt-multi-thread"] }
crossbeam = "0.8.1"
openssl = "0.10"
zmq = "0.9"
async-stream = "0.3.2"

[build-dependencies]
glob = "0.3.0"
prost-build = "0.9.0"

[features]
default = ["vendored-zmq","vendored-openssl"]
vendored-zmq = ['zmq/vendored']
vendored-openssl = ['openssl/vendored']
