[[bin]]
name = "chronicle_sawtooth_tp"
path = "src/main.rs"

[package]
name = "sawtooth_tp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
proto = { path = "../sawtooth_protocol" }
clap = { version = "3.0.12" }
clap_generate = "3.0.2"
bytes = "1.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
custom_error = "1.9.2"
serde = "1.0.135"
serde_derive = "1.0.135"
sawtooth-sdk = "0.5.0"
url = "2.2.2"
glob = "0.3.0"
serde_cbor = "0.11.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rand = { version = "0.8.4", features = ["getrandom"] }
k256 = { version = "0.10.2", features = [
    "arithmetic",
    "ecdsa",
    "pkcs8",
    "sha256",
    "std",
    "pem",
] }
rust-crypto = "0.2.36"
hex = "0.4.3"
rand_core = "0.6.3"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = [
    "default",
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3"
derivative = "2.2.0"
async-trait = "0.1.52"
futures = "0.3.19"
lazy_static = "1.4.0"
tokio = { version = "1.15.0", features = ["time", "macros", "rt-multi-thread"] }
crossbeam = "0.8.1"
openssl = "0.10.38"
zmq = "0.9.2"
tracing-log = "0.1.2"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }

[build-dependencies]
glob = "0.3.0"
prost-build = "0.9.0"

[dev-dependencies]
protobuf = "2"

[features]
default = ["vendored-zmq", "vendored-openssl"]
vendored-zmq = ['zmq/vendored']
vendored-openssl = ['openssl/vendored']
