[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = [
  "rt-tokio",
  "collector_client",
  "reqwest_collector_client",
] }
tracing = "0.1.32"
tracing-log = "0.1.2"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.9", features = [
  "default",
  "registry",
  "env-filter",
] }
url = { version = "2.2.2", features = ["serde"] }
