[package]
build   = "build.rs"
edition = "2021"
name    = "api"
version = "0.6.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { features = [
  "opentelemetry",
  "chrono",
  "unblock",
  "default",
  "uuid",
], version = "4.0.9" }
async-graphql-poem = "4.0.9"
async-stream = "0.3.3"
async-trait = "0.1.53"
base64 = "0.21"
chrono = "0.4.19"
common = { path = "../common" }
custom_error = "1.9.2"
derivative = "2.2.0"
diesel = { version = "2.0.0-rc.0", features = [
  "postgres",
  "uuid",
  "chrono",
  "r2d2",
] }
diesel_migrations = { version = "2.0.0-rc.0", features = ["postgres"] }
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
iref = "2.1.2"
iref-enum = "2.0.0"
json = "0.12.4"
json-ld = "0.4.0"
jwtk = { version = "0.2.4", features = ["remote-jwks"] }
open = "3.2.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
poem = { version = "1.3.30", features = ["opentelemetry", "websocket"] }
r2d2 = "0.8.9"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.3"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.81"
static-iref = "2.0.0"
telemetry = { path = "../telemetry" }
thiserror = "1.0.36"
tokio = { version = "1.20.3", features = ["time", "macros", "rt-multi-thread"] }
tracing = "0.1.32"
url = "2.2.2"
user-error = "1.2.8"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
insta    = { version = "1.14.0", features = ["redactions", "toml", "json"] }
tempfile = "3.3.0"

[build-dependencies]

[features]
inmem  = []
strict = []
